# mlflow-misc

./: .gitignore  CLAUDE.md  README.md  README_LLAMA_RAG.md  README_MLFLOW_3.X_LEARNING _PLAN.md  README_MLFLOW_3.X_LEARNING_PLAN.md  __init__.py  pyproject.toml
genai/: __init__.py
genai/agents/: README.md  __init__.py  fact_checker_agent.py  insect_expert_agent.py  insect_expert_ollama.py  insect_expert_openai.py  insect_expert_streamlit.py  test_simplified_evaluation.py
genai/agents/agent_planning/: README.md  __init__.py  agent_evaluation_demo.py  agent_planning_executor.py  agent_planning_judge.ipynb  agent_planning_judge.py  agent_planning_judge_cls.py  prompts.py
genai/agents/agent_planning/tools/: __init__.py  base.py  calendar_tools.py  email_tools.py  flight_tools.py  hotel_tools.py  utils.py
genai/agents/datasets/: fetch_testdata.py  test_dataset.py  wikipedia_dataset.py
genai/agents/deepeval/: README.md  customer_support_deepeval_demo.ipynb  customer_support_simple_deepeval_agent.py
genai/agents/insect_expert/: __init__.py  agent.py  evaluation.py  insect_agent_streamlit_app.py  prompts.py
genai/agents/multi_turn/: README.md  __init__.py  customer_support_agent.ipynb  customer_support_agent.py  customer_support_agent_cls.py  customer_support_agent_databricks_dev_connect.ipynb  customer_support_agent_local_dev_connect.ipynb  customer_support_agent_simple.py  customer_support_agent_v2.ipynb  prompts.py  scenarios.py  simple_conversation.py.save  simple_multi_turn_conversation.py
genai/agents/tests/: test_databricks_serving.py  test_simplified_evaluation.py
genai/agents/tools_selection/: README.md  __init__.py  prompts.py  tool_selection_judge.ipynb  tool_selection_judge.py  tool_selection_judge_cls.py
genai/common/: __init__.py  config.py  mlflow_config.py  providers.py
models/: __init__.py
scripts/py/: create_learning_plan_gif.py
spark/: README.md  __init__.py  custom_datasource_example.py  spark_langchain_multiple_mode.py  spark_langchain_ollama.py  spark_langchain_sentiment_analysis.py  spark_langchain_simple.py  spark_langchain_utils.py  spark_llamaindex_rag.py  spark_ml_utils.py  spark_real_nyc_taxi_data.py  spark_synthetic_nyc_taxi_data.py
tests/genai/: __init__.py  test_fact_checker_agent.py
tracking/: README.md  __init__.py  simple_tracking_basic.py
tracking/mlruns/0/: meta.yaml
tracking/mlruns/445108229672134057/: meta.yaml
tracking/mlruns/445108229672134057/199979c812f844b4aeb4f156fe79180a/: meta.yaml
tracking/mlruns/445108229672134057/199979c812f844b4aeb4f156fe79180a/artifacts/: estimator.html
tracking/mlruns/445108229672134057/199979c812f844b4aeb4f156fe79180a/metrics/: training_mean_absolute_error  training_mean_squared_error  training_r2_score  training_root_mean_squared_error  training_score
tracking/mlruns/445108229672134057/199979c812f844b4aeb4f156fe79180a/outputs/m-475814088cf549ea815234688a7a719e/: meta.yaml
tracking/mlruns/445108229672134057/5445e5d5ab4d4ba7b31f5000b6483c1b/: meta.yaml
tracking/mlruns/445108229672134057/5445e5d5ab4d4ba7b31f5000b6483c1b/artifacts/: estimator.html
tracking/mlruns/445108229672134057/5445e5d5ab4d4ba7b31f5000b6483c1b/metrics/: training_mean_absolute_error  training_mean_squared_error  training_r2_score  training_root_mean_squared_error  training_score
tracking/mlruns/445108229672134057/5445e5d5ab4d4ba7b31f5000b6483c1b/outputs/m-a5cccd9e3cb44c5181b06e453365630e/: meta.yaml
tracking/mlruns/445108229672134057/644bfaec4b5747b1b2e756e6537a4eca/: meta.yaml
tracking/mlruns/445108229672134057/644bfaec4b5747b1b2e756e6537a4eca/artifacts/: estimator.html
tracking/mlruns/445108229672134057/644bfaec4b5747b1b2e756e6537a4eca/metrics/: training_mean_absolute_error  training_mean_squared_error  training_r2_score  training_root_mean_squared_error  training_score
tracking/mlruns/445108229672134057/datasets/1f2c101b71d7de414c7ec77971afb151/: meta.yaml
tracking/mlruns/445108229672134057/datasets/8a0efac95b5b8d355eef2ff4e845cdf1/: meta.yaml
tracking/mlruns/445108229672134057/models/m-475814088cf549ea815234688a7a719e/: meta.yaml
tracking/mlruns/445108229672134057/models/m-475814088cf549ea815234688a7a719e/artifacts/: MLmodel  input_example.json
tracking/mlruns/445108229672134057/models/m-9c212c02fc8a4c4a823c26bd72013a9e/: meta.yaml
tracking/mlruns/445108229672134057/models/m-a5cccd9e3cb44c5181b06e453365630e/: meta.yaml
tutorials/: 01_setup_and_introduction.ipynb  02_experiment_tracking.ipynb  03_introduction_to_tracing.ipynb  04_manual_tracing_advanced.ipynb  05_prompt_management.ipynb  06_framework_integrations.ipynb  07_evaluating_agents.ipynb  08_complete_rag_application.ipynb  08_prompt_optimization.ipynb  09_complete_rag_application.ipynb  09_multiagent_orchestration.ipynb  FINAL_SUMMARY.md  README.md  env_template  prompt_optimization.ipynb  pyproject.toml  requirements.txt  test_ai_gateway_endpoints.py  utils.py
tutorials/utils/: clnt_utils.py
utils/: __init__.py  data_generation.py  loader.py  mlflow_setup.py  model_evaluation.py  sample_documents.py  spark_utils.py  visualization.py
(+27 files in other folders)
