[project]
name = "tutorials"
version = "0.1.0"
description = "MLflow tutorials and examples"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "databricks-langchain",
    "langchain-openai",
    "matplotlib>=3.7.0",
    "mlflow>=3.8.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=1.2.7",
    "llama-index>=0.14.13",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
